# WebTorrentPlayer

./: AGENTS.md  CLAUDE.md  GEMINI.md  PROGRESS.md  README.md  package-lock.json  package.json  pnpm-lock.yaml
flutter_app/: README.md  pubspec.yaml
flutter_app/ios/Runner.xcodeproj/: project.pbxproj
flutter_app/lib/: main.dart
flutter_app/lib/blocs/torrent/: torrent.dart  torrent_bloc.dart  torrent_event.dart  torrent_state.dart
flutter_app/lib/models/: torrent_models.dart
flutter_app/lib/screens/: home_screen.dart  player_screen.dart
flutter_app/lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart  state.dart
flutter_app/lib/src/rust/api/: torrent.dart
flutter_app/linux/flutter/: generated_plugins.cmake
flutter_app/macos/: Podfile
flutter_app/macos/Flutter/: GeneratedPluginRegistrant.swift
flutter_app/macos/Runner.xcodeproj/: project.pbxproj
flutter_app/rust/: Cargo.toml
flutter_app/rust/src/: frb_generated.rs  lib.rs  state.rs
flutter_app/rust/src/api/: mod.rs  torrent.rs
flutter_app/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
src/: App.css  App.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  server.rs  state.rs
src/lib/: SearchPopup.tsx  android.ts  i18n.ts  native-player.ts  search.ts  sources.ts  video.ts
