[package]
name = "torplay"
version = "0.1.0"
description = "P2P Streaming Player"
authors = ["Architect"]
edition = "2021"

[lib]
name = "torplay_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
mime_guess = "2"

# Async & Network
tokio = { version = "1", features = ["full"] }
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tokio-util = { version = "0.7", features = ["io"] }
futures = "0.3"

# P2P Engine
librqbit = { version = "8.1", default-features = false, features = ["rust-tls"] }

# Utilities
anyhow = "1"
parking_lot = "0.12"
chrono = "0.4"

[build-dependencies]
tauri-build = { version = "2", features = [] }
